[gd_scene load_steps=28 format=2]

[ext_resource path="res://scripts/TutorialRoom3.gd" type="Script" id=1]
[ext_resource path="res://art_assets/2D Pixel Dungeon Asset Pack v2.0/2D Pixel Dungeon Asset Pack/Dungeon_Tileset_at.png" type="Texture" id=2]
[ext_resource path="res://art_assets/2D Pixel Dungeon Asset Pack v2.0/2D Pixel Dungeon Asset Pack/character and tileset/Dungeon_Tileset.png" type="Texture" id=3]
[ext_resource path="res://scenes/objects/Fire.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/door.gd" type="Script" id=6]
[ext_resource path="res://actionable/actionable.gd" type="Script" id=7]
[ext_resource path="res://scenes/EventNode.tscn" type="PackedScene" id=8]
[ext_resource path="res://dialog/PopupDialog.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/objects/Key.tscn" type="PackedScene" id=10]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 8.99305, 0, 16.1639, 0, 16.1639, 32, 8.79924, 32 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 16.1639, 0, 31.6684, 0, 31.6684, 15.5825, 16.1639, 15.5825 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 15.9701, 0, 15.9701, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 16.1201, 0, 32, 0, 32, 32, 16.1201, 32 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 31.8403, 0, 32, 15.3887, 0, 15.7763 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 15.7325, 15.5825, 32, 15.5825, 32, 32, 15.9263, 32 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 31.4308, 0, 31.4308, 15.5825, 0, 15.5825 )

[sub_resource type="TileSet" id=1]
0/name = "Dungeon_Tileset.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Dungeon_Tileset.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 32, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 11 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Dungeon_Tileset.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 64, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 4 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "Dungeon_Tileset.png 3"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 32, 64, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 5 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "Dungeon_Tileset.png 4"
4/texture = ExtResource( 3 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 64, 64, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 6 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "Dungeon_Tileset.png 5"
5/texture = ExtResource( 3 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 32, 32, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "Dungeon_Tileset.png 6"
6/texture = ExtResource( 3 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 64, 32, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 7 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "Dungeon_Tileset.png 7"
7/texture = ExtResource( 3 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 32, 0, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 8 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "Dungeon_Tileset.png 8"
8/texture = ExtResource( 3 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 64, 0, 32, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 9 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "Dungeon_Tileset.png 9"
9/texture = ExtResource( 3 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 128, 0, 32, 32 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "Dungeon_Tileset.png 10"
10/texture = ExtResource( 3 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 96, 0, 32, 32 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 219, 352, 73, 32 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 45.4505, 23.5266 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 46.8458, 26.524 )

[sub_resource type="Animation" id=16]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Overlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Overlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="TutorialRoom3" type="Node"]
script = ExtResource( 1 )
room_name = "TutorialRoom3"

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 1, 2 )
scale = Vector2( 3, 3 )
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
cell_tile_origin = 1
show_collision = true
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 7, 0, 2, 7, 0, 3, 7, 0, 4, 7, 0, 5, 7, 0, 6, 7, 0, 7, 7, 0, 8, 7, 0, 9, 7, 0, 10, 8, 0, 65536, 1, 0, 65537, 5, 0, 65538, 9, 0, 65539, 9, 0, 65540, 9, 0, 65541, 9, 0, 65542, 9, 0, 65543, 9, 0, 65544, 9, 0, 65545, 9, 0, 65546, 6, 0, 131072, 1, 0, 131073, 9, 0, 131074, 9, 0, 131075, 9, 0, 131076, 9, 0, 131077, 9, 0, 131078, 9, 0, 131079, 9, 0, 131080, 9, 0, 131081, 9, 0, 131082, 6, 0, 196608, 1, 0, 196609, 9, 0, 196610, 9, 0, 196611, 9, 0, 196612, 9, 0, 196613, 9, 0, 196614, 9, 0, 196615, 9, 0, 196616, 9, 0, 196617, 9, 0, 196618, 6, 0, 262144, 1, 0, 262145, 9, 0, 262146, 9, 0, 262147, 9, 0, 262148, 9, 0, 262149, 9, 0, 262150, 9, 0, 262151, 9, 0, 262152, 9, 0, 262153, 9, 0, 262154, 6, 0, 327680, 1, 0, 327681, 9, 0, 327682, 9, 0, 327683, 9, 0, 327684, 9, 0, 327685, 9, 0, 327686, 9, 0, 327687, 9, 0, 327688, 9, 0, 327689, 9, 0, 327690, 6, 0, 393216, 2, 0, 393217, 3, 0, 393218, 3, 0, 393219, 3, 0, 393220, 3, 0, 393221, 3, 0, 393222, 3, 0, 393223, 3, 0, 393224, 3, 0, 393225, 3, 0, 393226, 4, 0 )

[node name="Player" parent="." groups=["player"] instance=ExtResource( 5 )]
position = Vector2( 512, 303 )
collision_layer = 145
collision_mask = 145

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 0, 2 )

[node name="DoorMain" type="StaticBody2D" parent="."]
position = Vector2( 1565, -254 )
rotation = 1.5708
scale = Vector2( 1.04599, 1.01981 )
script = ExtResource( 6 )
door_to = "Main"
object_type = "door_locked"

[node name="AnimatedSprite" type="AnimatedSprite" parent="DoorMain"]
position = Vector2( 566.929, 526.903 )
scale = Vector2( 1.25, 1.38864 )
frames = SubResource( 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorMain"]
visible = false
position = Vector2( 566.929, 524.614 )
shape = SubResource( 14 )

[node name="Actionable" type="Area2D" parent="DoorMain"]
collision_layer = 16
collision_mask = 16
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorMain/Actionable"]
position = Vector2( 566.929, 526.52 )
shape = SubResource( 15 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="Overlay" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.019
anchor_bottom = 1.122
margin_left = -2.0
margin_right = -2.76001
margin_bottom = -2.20007
rect_pivot_offset = Vector2( -293, 1071 )
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 16 )
anims/fade_out = SubResource( 17 )

[node name="SpawnPos" type="Position2D" parent="."]
visible = false
position = Vector2( 81, 342 )

[node name="FireLayer1" type="Node2D" parent="."]
visible = false

[node name="Fire" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 0, 27 )

[node name="Fire2" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( -1, 92 )

[node name="Fire17" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 66, 27 )

[node name="Fire18" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 134, 27 )

[node name="Fire19" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 200, 27 )

[node name="Fire20" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 270, 27 )

[node name="Fire21" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 336, 27 )

[node name="Fire22" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 470, 27 )

[node name="Fire28" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 403, 27 )

[node name="Fire23" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 610, 27 )

[node name="Fire24" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 545, 27 )

[node name="Fire26" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 744, 27 )

[node name="Fire27" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 679, 27 )

[node name="Fire25" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 810, 27 )

[node name="Fire29" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 66, 486 )

[node name="Fire30" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 134, 486 )

[node name="Fire31" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 200, 486 )

[node name="Fire32" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 270, 486 )

[node name="Fire33" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 336, 486 )

[node name="Fire34" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 470, 486 )

[node name="Fire35" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 403, 486 )

[node name="Fire36" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 610, 486 )

[node name="Fire37" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 744, 486 )

[node name="Fire38" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 810, 486 )

[node name="Fire39" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 66, 486 )

[node name="Fire40" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 134, 486 )

[node name="Fire41" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 200, 486 )

[node name="Fire42" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 270, 486 )

[node name="Fire43" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 336, 486 )

[node name="Fire44" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 678, 486 )

[node name="Fire49" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 540, 486 )

[node name="Fire50" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 540, 486 )

[node name="Fire45" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 403, 486 )

[node name="Fire46" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 610, 486 )

[node name="Fire47" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 744, 486 )

[node name="Fire48" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 810, 486 )

[node name="Fire3" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( -1, 227 )

[node name="Fire4" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 0, 162 )

[node name="Fire5" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( -1, 358 )

[node name="Fire6" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 0, 293 )

[node name="Fire7" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( -1, 485 )

[node name="Fire8" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 0, 420 )

[node name="Fire9" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 877, 92 )

[node name="Fire10" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 878, 27 )

[node name="Fire11" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 877, 227 )

[node name="Fire12" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 878, 162 )

[node name="Fire13" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 877, 358 )

[node name="Fire14" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 878, 293 )

[node name="Fire15" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 877, 485 )

[node name="Fire16" parent="FireLayer1" instance=ExtResource( 4 )]
position = Vector2( 878, 420 )

[node name="FireLayer2" type="Node2D" parent="."]
visible = false

[node name="Fire" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 65, 93 )

[node name="Fire2" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 132, 93 )

[node name="Fire3" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 201, 93 )

[node name="Fire4" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 268, 93 )

[node name="Fire5" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 337, 93 )

[node name="Fire6" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 404, 93 )

[node name="Fire7" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 473, 93 )

[node name="Fire8" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 540, 93 )

[node name="Fire9" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 608, 93 )

[node name="Fire10" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 675, 93 )

[node name="Fire11" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 744, 93 )

[node name="Fire12" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 811, 93 )

[node name="Fire13" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 65, 420 )

[node name="Fire14" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 132, 420 )

[node name="Fire15" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 201, 420 )

[node name="Fire16" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 268, 420 )

[node name="Fire17" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 337, 420 )

[node name="Fire25" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 63, 355 )

[node name="Fire26" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 65, 292 )

[node name="Fire27" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 65, 226 )

[node name="Fire28" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 67, 159 )

[node name="Fire30" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 808, 355 )

[node name="Fire31" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 810, 292 )

[node name="Fire32" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 810, 226 )

[node name="Fire33" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 812, 159 )

[node name="Fire18" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 404, 420 )

[node name="Fire19" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 473, 420 )

[node name="Fire20" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 540, 420 )

[node name="Fire21" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 608, 420 )

[node name="Fire22" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 675, 420 )

[node name="Fire23" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 744, 420 )

[node name="Fire24" parent="FireLayer2" instance=ExtResource( 4 )]
position = Vector2( 811, 420 )

[node name="FireLayer3" type="Node2D" parent="."]
visible = false

[node name="Fire" parent="FireLayer3" instance=ExtResource( 4 )]
position = Vector2( 136, 159 )

[node name="Fire2" parent="FireLayer3" instance=ExtResource( 4 )]
position = Vector2( 202, 159 )

[node name="Fire3" parent="FireLayer3" instance=ExtResource( 4 )]
position = Vector2( 270, 159 )

[node name="Fire4" parent="FireLayer3" instance=ExtResource( 4 )]
position = Vector2( 336, 159 )

[node name="Fire5" parent="FireLayer3" instance=ExtResource( 4 )]
position = Vector2( 405, 159 )

[node name="Fire6" parent="FireLayer3" instance=ExtResource( 4 )]
position = Vector2( 471, 159 )

[node name="Fire7" parent="FireLayer3" instance=ExtResource( 4 )]
position = Vector2( 540, 159 )

[node name="Fire8" parent="FireLayer3" instance=ExtResource( 4 )]
position = Vector2( 606, 159 )

[node name="Fire9" parent="FireLayer3" instance=ExtResource( 4 )]
position = Vector2( 678, 159 )

[node name="Fire10" parent="FireLayer3" instance=ExtResource( 4 )]
position = Vector2( 744, 159 )

[node name="Fire11" parent="FireLayer3" instance=ExtResource( 4 )]
position = Vector2( 136, 355 )

[node name="Fire21" parent="FireLayer3" instance=ExtResource( 4 )]
position = Vector2( 136, 287 )

[node name="Fire22" parent="FireLayer3" instance=ExtResource( 4 )]
position = Vector2( 136, 222 )

[node name="Fire23" parent="FireLayer3" instance=ExtResource( 4 )]
position = Vector2( 741, 287 )

[node name="Fire24" parent="FireLayer3" instance=ExtResource( 4 )]
position = Vector2( 741, 222 )

[node name="Fire12" parent="FireLayer3" instance=ExtResource( 4 )]
position = Vector2( 202, 355 )

[node name="Fire13" parent="FireLayer3" instance=ExtResource( 4 )]
position = Vector2( 270, 355 )

[node name="Fire14" parent="FireLayer3" instance=ExtResource( 4 )]
position = Vector2( 336, 355 )

[node name="Fire15" parent="FireLayer3" instance=ExtResource( 4 )]
position = Vector2( 405, 355 )

[node name="Fire16" parent="FireLayer3" instance=ExtResource( 4 )]
position = Vector2( 471, 355 )

[node name="Fire17" parent="FireLayer3" instance=ExtResource( 4 )]
position = Vector2( 540, 355 )

[node name="Fire18" parent="FireLayer3" instance=ExtResource( 4 )]
position = Vector2( 606, 355 )

[node name="Fire19" parent="FireLayer3" instance=ExtResource( 4 )]
position = Vector2( 678, 355 )

[node name="Fire20" parent="FireLayer3" instance=ExtResource( 4 )]
position = Vector2( 744, 355 )

[node name="FireLayer4" type="Node2D" parent="."]
visible = false

[node name="Fire" parent="FireLayer4" instance=ExtResource( 4 )]
position = Vector2( 204, 221 )

[node name="Fire2" parent="FireLayer4" instance=ExtResource( 4 )]
position = Vector2( 204, 283 )

[node name="Fire3" parent="FireLayer4" instance=ExtResource( 4 )]
position = Vector2( 680, 221 )

[node name="Fire4" parent="FireLayer4" instance=ExtResource( 4 )]
position = Vector2( 680, 283 )

[node name="FireLayer5" type="Node2D" parent="."]
visible = false

[node name="Fire" parent="FireLayer5" instance=ExtResource( 4 )]
position = Vector2( 272, 220 )

[node name="Fire2" parent="FireLayer5" instance=ExtResource( 4 )]
position = Vector2( 272, 283 )

[node name="Fire3" parent="FireLayer5" instance=ExtResource( 4 )]
position = Vector2( 610, 222 )

[node name="Fire4" parent="FireLayer5" instance=ExtResource( 4 )]
position = Vector2( 610, 285 )

[node name="FireLayer6" type="Node2D" parent="."]
visible = false

[node name="Fire" parent="FireLayer6" instance=ExtResource( 4 )]
position = Vector2( 340, 220 )

[node name="Fire2" parent="FireLayer6" instance=ExtResource( 4 )]
position = Vector2( 342, 283 )

[node name="Fire3" parent="FireLayer6" instance=ExtResource( 4 )]
position = Vector2( 543, 220 )

[node name="Fire4" parent="FireLayer6" instance=ExtResource( 4 )]
position = Vector2( 545, 283 )

[node name="FireLayer7" type="Node2D" parent="."]
visible = false

[node name="Fire" parent="FireLayer7" instance=ExtResource( 4 )]
position = Vector2( 408, 222 )

[node name="Fire2" parent="FireLayer7" instance=ExtResource( 4 )]
position = Vector2( 408, 286 )

[node name="Fire3" parent="FireLayer7" instance=ExtResource( 4 )]
position = Vector2( 475, 222 )

[node name="Fire4" parent="FireLayer7" instance=ExtResource( 4 )]
position = Vector2( 475, 286 )

[node name="EventNode" parent="." instance=ExtResource( 8 )]

[node name="PopupDialog" parent="." instance=ExtResource( 9 )]
margin_left = -184.0
margin_top = -168.0
margin_right = -184.0
margin_bottom = -168.0

[node name="Key" parent="." instance=ExtResource( 10 )]
visible = false
position = Vector2( -99, 14 )

[connection signal="change_room" from="Player" to="." method="_on_Player_change_room"]
[connection signal="door_locked" from="Player" to="." method="_on_Player_door_locked"]
[connection signal="interact_object" from="Player" to="." method="_on_Key_pickup"]
[connection signal="body_entered" from="DoorMain/Actionable" to="DoorMain/Actionable" method="_on_Player_entered"]
[connection signal="body_exited" from="DoorMain/Actionable" to="DoorMain/Actionable" method="_on_Player_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
